# module/authentication/model/request/LogoutRequest.go
@@ -1,0 +1,5 @@
+package request
+
+type LogoutRequest struct {
+	RefreshToken string `json:"refreshToken" binding:"required"`
+}
