# module/authentication/model/response/LogoutResponse.go
@@ -1,0 +1,5 @@
+package response
+
+type LogoutResponse struct {
+	Message string `json:"message" example:"logged out"`
+}
